syntax = "proto3";

package evt_log;

// A sequence of binarized events.
message Evts {
  // A sequence of binarized events.
  repeated bytes evts = 1;
}
